fixed document form tag align in FF3
git-svn-id: svn+ssh://gestorpsi.com.br/usr/home/gestor/svn/gestorpsi/trunk@141 9d7c2c66-4cfa-11dd-a3c8-a9f1d0faa0c5

--- a/gestorpsi/media/css/layout.css
+++ b/gestorpsi/media/css/layout.css
@@ -863,3 +863,8 @@ font-size: 10px;
 color: #cccccc;
 text-align:center;
 }
+
+.form_document_box {
+padding-bottom: 65px;
+
+}
